# convex-optimisation

./: .gitignore  README.md  constants.py  gradient_algorithms.py  helpers.py  main.py  part_3.py  part_4.py  problems.py  pyproject.toml  submission.tex
src/: gradient_algorithms.py  problems.py
