[tool.poetry]
name = "comp0083-convex-assignment"
version = "0.0.0"
description = "Convex Optimisation coursework for Advanced Topics in Machine Learning (COMP0083) at UCL 2022"
authors = ["James Wu <jian.wu.22@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

# Core dependencies
numpy="^1.21.5"
scipy="~1.9.1"
matplotlib="^3.5.2"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6"
isort = "^5.10"
pytest = "^7.1"

[tool.isort]
skip = [".venv", "demo_code"]

[tool.black]
exclude = '''
(
  /(
    | \.venv
    | demo_code
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true